update urls, fix unreadable placeholder

--- a/cepheus-atom/sheet.css
+++ b/cepheus-atom/sheet.css
@@ -30,7 +30,7 @@
 }
 .charsheet .dirtyborder {
   border-width: 3px;
-  border-image-source: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/atom/cepheus-atom/img-noise.png);
+  border-image-source: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/cepheus-atom/img-noise.png");
   border-image-slice: 4% 5% 13;
   filter: invert(100%) sepia(93%);
 }
@@ -230,7 +230,7 @@
   font-weight: 600;
   line-height: 2;
   border: 3px solid burlywood;
-  border-image-source: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/atom/cepheus-atom/img-noise.png);
+  border-image-source: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/cepheus-atom/img-noise.png");
   border-image-slice: 16% 6% 13;
   filter: invert(100%) sepia(93%);
 }
@@ -262,13 +262,16 @@
   font-size: 1.4em;
   padding: 6px 6px 3px 6px;
   flex-grow: 0;
-  border-image-source: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/atom/cepheus-atom/img-noise.png);
+  border-image-source: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/cepheus-atom/img-noise.png");
   border-image-slice: 16% 6% 13;
   filter: invert(100%) sepia(93%);
   color: white;
 }
 .charsheet section.skills .flex-row input:focus {
   color: black;
+}
+.charsheet section.skills .flex-row input.warn-missing:placeholder-shown {
+  background-color: #a9999d;
 }
 .charsheet section.skills .flex-row button {
   width: 108px;
