--- a/cepheus-atom/src/scss/_core.scss
+++ b/cepheus-atom/src/scss/_core.scss
@@ -1,3 +1,7 @@
+// SASS Var
+$url: "https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/cepheus-atom/";
+// url("#{$url}bg.png")
+
 // ------------------------------------------------
 //  #GENERAL
 // ------------------------------------------------
@@ -41,7 +45,7 @@
 
     .dirtyborder{
         border-width: 3px;
-        border-image-source: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/atom/cepheus-atom/img-noise.png);
+        border-image-source: url("#{$url}img-noise.png");
         border-image-slice: 4% 5% 13;
         filter: invert(100%) sepia(93%);
         * {
@@ -279,7 +283,7 @@
             font-weight: 600;
             line-height: 2;
             border: 3px solid burlywood;
-            border-image-source: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/atom/cepheus-atom/img-noise.png);
+            border-image-source: url("#{$url}img-noise.png");
             border-image-slice: 16% 6% 13;
             filter: invert(100%) sepia(93%);
         }
@@ -314,13 +318,16 @@
                 font-size: 1.4em;
                 padding: 6px 6px 3px 6px;
                 flex-grow: 0;
-                border-image-source: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/atom/cepheus-atom/img-noise.png);
+                border-image-source: url("#{$url}img-noise.png");
                 border-image-slice: 16% 6% 13;
                 filter: invert(100%) sepia(93%);
                 color: white;
 
                 &:focus{
                     color: black;
+                }
+                &.warn-missing:placeholder-shown{
+                    background-color: #a9999d;
                 }
             }
             button{
